adjusted jumbotron pic

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>The Cardinal Principles</h2>
-							<p>Phi Sigma Kappa was founded upon three basic Cardinal, or guiding, Princples</p>
+							<p>Phi Sigma Kappa was founded upon three basic Cardinal Princples</p>
 						</header>
 						<div class="row 150%">
 							<div class="4u 12u$(small)">
