Updated Brothers page, fixed Grant Page issues

--- a/grantprogram.html
+++ b/grantprogram.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	</head>
 	<body>
 
@@ -40,7 +41,7 @@
 					</header>
 
 					<a href="#" class="image fit"><img src="images/banner1.jpg" alt="" /></a>
-					<h3>Purpose:</h3>
+					<h3 class="about">About the Grant:</h3>
 					<p>As neighbors dedicated to the growth, improvement and future of the Mt. Ida community, Phi Sigma Kappa 
 						at RPI is sponsoring a $50,000 grant program to improve the “quality of life” in the Mt. Ida neighborhood. 
 						Home-owners, landlords, business owners and not-for-profits, will be eligible to apply for a grant up to the 
@@ -52,7 +53,7 @@
 							<li>Non-profit programs which service residents of the neighborhood</li>
 						</ul>
 					</p>
-					<h3>Eligibility:</h3>
+					<h3 class="eligiblity">Eligibility:</h3>
 					<p>Any of the following individuals, businesses, or organizations who live and/or work in or near the Mt. Ida Micro Grant 
 						target area are eligible to apply. Although not shown on the map, Mt Ida Cemetery is included in the 
 						target area. Those who are eligible include, but are not limited to:
@@ -62,10 +63,16 @@
 							<li>Land-lords (non-owner occupied or owner occupied building with 4 or more units)</li>
 							<li>Churches and Not-for-Profits</li>
 						</ul>
-						<center><div class="6u"><span class="image fit"><img src="images/grantprogram/map.png" alt="" /></span></div></center>
-						
+						<center>
+							<div class="6u$">
+								<div class="image fit captioned">
+									<img src="images/grantprogram/map.png" alt="" />
+									<h3>Mt. Ida Region Map</h3>
+								</div>
+							</div>
+						</center>
 					</p>
-					<h3>Grants:</h3>
+					<h3 class="categories">Grant Categories:</h3>
 					<p>The maximum grant award to any individual, business, or organization is $1,000. Applicant funding requests will be as follows:
 						<ul>
 							<li>Home-owners - up to $1,000</li>
@@ -74,7 +81,7 @@
 							<li>Churches and Not-for-Profits - up to $1000</li>
 						</ul>
 					</p>
-					<h3>Project Examples and Previous Winners:</h3>
+					<h3 class="examples">Project Examples and Previous Winners:</h3>
 					<p>The money has to be used on projects or programs that improve the quality of life in the Mt Ida Neighborhood. Here are some projects/programs that qualify:
 						<ul>
 							<li>Exterior Home Repair - Painting, Siding, Window Replacement, Roof Repair, Masonry repair, sidewalk improvements, etc.
@@ -98,6 +105,14 @@
 							</div>
 						</div>
 						
+					</p>
+
+					<h3 class = "apply">How to Apply:</h3>
+					<p>Begin your application today! Download all of the necessary resources below:
+						<ul>
+							<li>Full Program Application: <a href="https://drive.google.com/open?id=17cF5UTPwuMDmF6bRtGkF1CrAfYHroduW"><i class="icon fa-file-pdf"></i> DOWNLOAD</a></li>
+							<li>2019 Grant Program Flyer: <a href="https://drive.google.com/open?id=15drv1RY6hWa67v6czql54-sLdX8MaCCD"><i class="icon fa-file-pdf"></i> DOWNLOAD</a></li>
+						</ul>
 					</p>
 
 				</div>
