--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h2>We are the church!</h2>
-				<p>Phi Sigma Kappa, Gamma Tetarton Chapter - Damn Proud since 1950!</p>
+				<h2>Phi Sigma Kappa <br/>Gamma Tetarton Chapter</h2>
+				<p>- Damn Proud since 1950 -</p>
 				<ul class="actions">
-					<li><a href="#" class="button special big">About the Chapter</a></li>
+					<li><a href="church.html" class="button special big">About the Chapter</a></li>
 				</ul>
 			</section>
 
@@ -87,7 +87,7 @@
 							</div>
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button special big">Learn About our Principles</a></li>
+							<li><a href="https://phisigmakappa.org/about/" class="button special big">Learn About our Principles</a></li>
 						</ul>
 					</div>
 				</section>
