--- a/brothers.html
+++ b/brothers.html
@@ -35,13 +35,13 @@
 				<div class="container">
 
 					<header class="major special">
-						<h2>Our Brothers</h2>
+						<h2>Meet the Brothers of Phi Sig</h2>
 					</header>
-
-					<a href="#" class="image fit"><img src="images/banner1.jpg" alt="" /></a>
-					<p>This page is under construction</p>
-					<p>This page is under construction</p>
-					<p>This page is under construction</p>
+					
+					<div class="image fit captioned">
+						<img src="images/brothers18.jpg" alt="" />
+						<h3>Class of 2018 Composite</h3>
+					</div>
 
 				</div>
 			</section>
