--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 						<p>Fill out the form to reach out to our chapter secretary - he will forward your message on to the appropriate chair</p>
 					</header>
 
-					<form action="#">
+					<form method="post" data-netlify="true" data-netlify-recaptcha="true">
 						<div class="row uniform 50%">
 							<div class="6u 12u$(xsmall)">
 								<input type="text" name="name" id="name" value="" placeholder="Name" />
