Fall rush 2019 changes, Alumni info page

--- a/brothers.html
+++ b/brothers.html
@@ -22,7 +22,8 @@
 						<li><a href="church.html">The Church</a></li>
 						<li><a href="brothers.html">Our Brothers</a></li>
 						<li><a href="grantprogram.html">Mount Ida Grant Program</a></li>
-						<li><a href="generic.html">Rush</a></li>
+						<li><a href="rush.html">Rush</a></li>
+						<li><a href="alumni.html">Alumni</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</nav>
