--- a/rush.html
+++ b/rush.html
@@ -23,6 +23,7 @@
 						<li><a href="brothers.html">Our Brothers</a></li>
 						<li><a href="grantprogram.html">Mount Ida Grant Program</a></li>
 						<li><a href="rush.html">Rush</a></li>
+						<li><a href="alumni.html">Alumni</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</nav>
@@ -35,21 +36,22 @@
 				<div class="container">
 
 					<header class="major special">
-						<h2>Rush 2018-2019</h2>
+						<h2>Rush <script>document.write(new Date().getFullYear())</script>-
+								 <script>document.write(new Date().getFullYear()+1)</script></h2>
 						<p>Interested in rushing Phi Sig? Check out our calendars below!</p>
 					</header>
 
 					<div class="row 150%">
 						<div class="6u 12u$(small)">
 							<div class="image fit captioned">
-								<img src="images/rush/fall18.png" alt="" />
-								<h3>Fall 2018 Rush Calendar</h3>
+								<img src="images/rush/fall19.png" alt="" />
+								<h3>Fall <script>document.write(new Date().getFullYear())</script> Rush Calendar</h3>
 							</div>
 						</div>
 						<div class="6u 12u$(small)">
 							<div class="image fit captioned">
-								<img src="images/rush/spring19.png" alt="" />
-								<h3>Spring 2019 Rush Calendar</h3>
+								<img src="" alt="SPRING RUSH CALENDAR COMING SOON!" />
+								<h3>Spring <script>document.write(new Date().getFullYear()+1)</script> Rush Calendar</h3>
 							</div>
 						</div>
 					</div>
