--- a/alumni.html
+++ b/alumni.html
@@ -32,28 +32,40 @@
 			<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 
 		<!-- Main -->
-			<section id="main" class="wrapper">
-				<div class="container">
+		<section id="main" class="wrapper">
+			<div class="container">
 
-					<header class="major special">
-						<h2>The St. Francis DeSales Church</h2>
-						<p>Our home on Congress Street</p>
-					</header>
+				<header class="major special">
+					<h2>Alumni Relations</h2>
+					<p>Public Resources for Alumni of the Gamma Tetarton chapter!</p>
+				</header>
 
-					<a href="#" class="image fit"><img src="images/banner1.jpg" alt="" /></a>
-					<p>The Gamma Tetarton Chapter of Phi Sigma Kappa was founded on October 14, 1950. We are known as the very first fraternity in the country to ever 
-						purchase and live in a church, hence our "Church" nickname. We boast not only the largest physical chapter house on campus, but one of the 
-						largest fraternity houses in the country. We own both the Church and the rectory next door, and can house up to 30 brothers at max occupancy.</p>
-					<p>Before this beautiful historic building became our home, it was formerly known as the Saint Francis De Sales Parish. The church was originally built in 1876. 
-						<!--< more church history here >. 
-						< more images and description of the building >-->
-						The St. Francis DeSales church closed its doors on February 1, 2009. The Gamma Tetarton Chapter completed the purchase of both the Church and Rectory
-						properties on February 4, 2011.</p>
-					<p>Since our moving into the Church, we have seen our chapter grow and prosper immensely. We achieved the highest campus GPA in 2014 and 2015. We also 
-						have launched several service projects, including the Mt. Ida Micro Grant Program and Phi Sig Frydays. We hope to continue growing the chapter for years to come!</p>
-
+				<h3>Donate to the Chapter:</h3>
+				<div class="row 150%">
+					<div class="6u 12u$(small)">
+						<h4>Venmo: @rpi-psk</h4>
+					</div>
 				</div>
-			</section>
+				<br/>
+
+				<h3>Newsletters:</h3>
+				<p>Alumni newsletters are released every semester, midsemester! Check back soon for more information!</p>
+				<div class="row 150%">
+					<div class="6u 12u$(small)">
+						<div class="image fit captioned">
+							<!--<img src="images/rush/fall19.png" alt="" />-->
+							<h3>Fall <script>document.write(new Date().getFullYear())</script> Newsletter</h3>
+						</div>
+					</div>
+					<div class="6u 12u$(small)">
+						<div class="image fit captioned">
+							<!--<img src="images/rush/fall19.png" alt="" />-->
+							<h3>Spring <script>document.write(new Date().getFullYear()+1)</script> Newsletter</h3>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
 		<!-- Footer -->
 			<footer id="footer">
